[project]
name = "unluac"
version = "1.0.0"

authors = [
  { name="TooLazyToCreate"},
  { name="tehtmi"},
]

description = "Python bindings for tehtmi's unluac.jar"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TooLazyToCreate/unluac"
Issues = "https://github.com/TooLazyToCreate/unluac/issues"